--- a/templates/articles/notice_list.html
+++ b/templates/articles/notice_list.html
@@ -2,11 +2,11 @@
 
 {% load static %}
 {% load htmlutils %}
+{% load capture_tags %}
 
 {% block content %}
-    <div class="big1 or">Анонсы</div>
-    <div style="width:1px; height:1px"><!-- --></div>
-    <div class="border_or">
+
+    {% capture as notice_list_tmpl silent %}
         <table class="full-table">
             {% for notice in object_list %}
                 <tr>
@@ -74,13 +74,7 @@
                 </table>
             </form>
         {% endif %}
-    </div>
+    {% endcapture %}
+    {% include 'incl/tile/base_orange.html' with title='Анонсы' content=notice_list_tmpl %}
 
-    <table class="full-table h7 bgFFF0E6">
-        <tr>
-            <td class="bg_orange_l w7"><div style="width:7px; height:7px"><!-- --></div></td>
-            <td class="wp100 bg_orange_c"><div style="width:1px; height:7px"><!-- --></div></td>
-            <td class="bg_orange_r w7"><div style="width:7px; height:7px"><!-- --></div></td>
-        </tr>
-    </table>
 {% endblock %}
